# qazcode-nu-submission

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  build_index.py  check_fields.py  debug2.py  debug_corpus_codes.py  debug_extract.py  debug_raw.py  debug_retrieval.py  evaluate.py  pyproject.toml  test_generate.py  test_llm.py
data/evals/: Assentay.jsonl  Assentay_metrics.json  Assentay_quick.jsonl  Assentay_quick_metrics.json
data/index/: bm25.pkl  chunks.json
data/index/qdrant/: meta.json
data/index/qdrant/collection/protocols/: storage.sqlite
notebooks/: llm_api_examples.ipynb
src/: generator.py  indexer.py  retriever.py  server.py
